--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=blog
+
+spring.profiles.active= dev
+
+api.security.secret = ${ENVIROMENT_SECRET : secret}
+api.security.issuer = ${ENVIROMENT_ISSUER : learn}
