user posts article with images

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.profiles.active= dev
 
 api.security.secret = ${ENVIROMENT_SECRET : secret}
 api.security.issuer = ${ENVIROMENT_ISSUER : learn}
+
+springdoc.swagger-ui.validator-url=none
