UPDATE AND REFACTOR - bean validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=blog
 
-spring.profiles.active= dev
+spring.profiles.active= ${SpringActiveProfile : dev}
 
 api.security.secret = ${ENVIROMENT_SECRET : secret}
 api.security.issuer = ${ENVIROMENT_ISSUER : learn}
 
-springdoc.swagger-ui.validator-url=none
+
